name:                urho3d-haskell
version:             0.1.0.0
synopsis:            Haskell bindings for Urho3D engine
description:         Please see README.md
homepage:            https://github.com/Teaspot-Studio/Urho3D-Haskell
license:             MIT
license-file:        LICENSE
author:              Teaspot Studio
maintainer:          ncrashed@gmail.com
copyright:           Teaspot Studio (c) 2015
category:            Bindings
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  include-dirs:        src/include

  exposed-modules:     Graphics.Urho3D
                       Graphics.Urho3D.Createable
                       Graphics.Urho3D.Monad
                       Graphics.Urho3D.Container.HashMap
                       Graphics.Urho3D.Container.Ptr
                       Graphics.Urho3D.Core.Context
                       Graphics.Urho3D.Core.Variant
                       Graphics.Urho3D.Engine.Application
                       Graphics.Urho3D.Math.StringHash
                       Graphics.Urho3D.Scene.Scene
                       Graphics.Urho3D.Scene.Node
                       Graphics.Urho3D.UI.Sprite

  other-modules:       Graphics.Urho3D.Core.Internal.Context
                       Graphics.Urho3D.Core.Internal.Variant
                       Graphics.Urho3D.Math.Internal.StringHash
                       Graphics.Urho3D.Scene.Internal.Scene
                       Graphics.Urho3D.Scene.Internal.Node
                       Graphics.Urho3D.Engine.Internal.Application
                       Graphics.Urho3D.UI.Internal.Sprite
                       Graphics.Urho3D.Template

  c-sources:           src/Graphics/Urho3D/Core/Context.cpp
                       src/Graphics/Urho3D/Core/Variant.cpp
                       src/Graphics/Urho3D/Engine/Application.cpp
                       src/Graphics/Urho3D/Math/StringHash.cpp
                       src/Graphics/Urho3D/Scene/Scene.cpp
                       src/Graphics/Urho3D/Scene/Node.cpp
                       src/Graphics/Urho3D/UI/Sprite.cpp

  build-depends:        base
                      , containers
                      , inline-c
                      , inline-c-cpp
                      , deepseq
                      , transformers
                      , mtl
                      , exceptions
                      , loch-th
                      , template-haskell
                      , StateVar

  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -fPIC
  cc-options:          -m64
  extra-libraries:     Urho3D, stdc++

executable urho3d-haskell-sample01
  hs-source-dirs:      app/sample01, app/common
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , urho3d-haskell
  default-language:    Haskell2010

test-suite urho3d-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , urho3d-haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git@github.com:Teaspot-Studio/Urho3D-Haskell.git
