name:                urho3d-haskell
version:             0.1.0.0
synopsis:            Haskell bindings for Urho3D engine
description:         Please see README.md
homepage:            https://github.com/Teaspot-Studio/Urho3D-Haskell
license:             MIT
license-file:        LICENSE
author:              Teaspot Studio
maintainer:          ncrashed@gmail.com
copyright:           Teaspot Studio (c) 2015
category:            Bindings
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  include-dirs:        src

  exposed-modules:     Graphics.Urho3D
                       Graphics.Urho3D.Container
                       Graphics.Urho3D.Container.HashMap
                       Graphics.Urho3D.Container.Ptr
                       Graphics.Urho3D.Core
                       Graphics.Urho3D.Core.Context
                       Graphics.Urho3D.Core.Object
                       Graphics.Urho3D.Core.ProcessUtils
                       Graphics.Urho3D.Core.Variant
                       Graphics.Urho3D.Createable
                       Graphics.Urho3D.Engine
                       Graphics.Urho3D.Engine.Application
                       Graphics.Urho3D.Engine.Engine
                       Graphics.Urho3D.Input
                       Graphics.Urho3D.Input.Events
                       Graphics.Urho3D.Input.Input
                       Graphics.Urho3D.IO
                       Graphics.Urho3D.IO.FileSystem
                       Graphics.Urho3D.Math.StringHash
                       Graphics.Urho3D.Monad
                       Graphics.Urho3D.Resource.Cache
                       Graphics.Urho3D.Scene
                       Graphics.Urho3D.Scene.Events
                       Graphics.Urho3D.Scene.Node
                       Graphics.Urho3D.Scene.Scene
                       Graphics.Urho3D.UI
                       Graphics.Urho3D.UI.Sprite

  other-modules:       Graphics.Urho3D.Core.Internal.Context
                       Graphics.Urho3D.Core.Internal.Object
                       Graphics.Urho3D.Core.Internal.Variant
                       Graphics.Urho3D.Engine.Internal.Application
                       Graphics.Urho3D.Engine.Internal.Engine
                       Graphics.Urho3D.IO.Internal.FileSystem
                       Graphics.Urho3D.Input.Internal.Input
                       Graphics.Urho3D.Math.Internal.StringHash
                       Graphics.Urho3D.Resource.Internal.Cache
                       Graphics.Urho3D.Scene.Internal.Node
                       Graphics.Urho3D.Scene.Internal.Scene
                       Graphics.Urho3D.Template
                       Graphics.Urho3D.UI.Internal.Sprite

  c-sources:           src/Graphics/Urho3D/Core/Context.cpp
                       src/Graphics/Urho3D/Core/Object.cpp
                       src/Graphics/Urho3D/Core/ProcessUtils.cpp
                       src/Graphics/Urho3D/Core/Variant.cpp
                       src/Graphics/Urho3D/Engine/Application.cpp
                       src/Graphics/Urho3D/Engine/Engine.cpp
                       src/Graphics/Urho3D/Input/Events.cpp
                       src/Graphics/Urho3D/Input/Input.cpp
                       src/Graphics/Urho3D/IO/FileSystem.cpp
                       src/Graphics/Urho3D/Math/StringHash.cpp
                       src/Graphics/Urho3D/Resource/Cache.cpp
                       src/Graphics/Urho3D/Scene/Events.cpp
                       src/Graphics/Urho3D/Scene/Node.cpp
                       src/Graphics/Urho3D/Scene/Scene.cpp
                       src/Graphics/Urho3D/UI/Sprite.cpp
                       
  build-depends:        base
                      , containers
                      , inline-c
                      , inline-c-cpp
                      , deepseq
                      , transformers
                      , mtl
                      , exceptions
                      , loch-th
                      , template-haskell
                      , StateVar
                      , raw-strings-qq

  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -fPIC
  cc-options:          -m64
  extra-libraries:     Urho3D, stdc++, SDL

executable urho3d-haskell-sample01
  hs-source-dirs:      app/sample01, app/common
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , urho3d-haskell
                     , StateVar
                     , lens
                     , mtl

  default-language:    Haskell2010

test-suite urho3d-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , urho3d-haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git@github.com:Teaspot-Studio/Urho3D-Haskell.git
