name:                urho3d-haskell
version:             0.1.0.0
synopsis:            Haskell bindings for Urho3D engine
description:         Please see README.md
homepage:            https://github.com/Teaspot-Studio/Urho3D-Haskell
license:             MIT
license-file:        LICENSE
author:              Teaspot Studio
maintainer:          ncrashed@gmail.com
copyright:           Teaspot Studio (c) 2015
category:            Bindings
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

flag Urho3DOpenGL 
  description: binding to Urho3D engine with OpenGL renderer
  default: True

flag Urho3DD3D9
  description: binding to Urho3D engine with Direct3D9 renderer
  default: False

flag Urho3DD3D11
  description: binding to Urho3D engine with Direct3D11 renderer
  default: False

library
  hs-source-dirs:      src
  include-dirs:        src

  exposed-modules:     Graphics.Urho3D
                       Graphics.Urho3D.Container
                       Graphics.Urho3D.Container.ForeignVector
                       Graphics.Urho3D.Container.HashMap
                       Graphics.Urho3D.Container.Ptr
                       Graphics.Urho3D.Container.Str
                       Graphics.Urho3D.Container.Vector
                       Graphics.Urho3D.Core
                       Graphics.Urho3D.Core.Context
                       Graphics.Urho3D.Core.Events
                       Graphics.Urho3D.Core.Object
                       Graphics.Urho3D.Core.ProcessUtils
                       Graphics.Urho3D.Core.Variant
                       Graphics.Urho3D.Createable
                       Graphics.Urho3D.Engine
                       Graphics.Urho3D.Engine.Application
                       Graphics.Urho3D.Engine.Console
                       Graphics.Urho3D.Engine.DebugHud
                       Graphics.Urho3D.Engine.Engine
                       Graphics.Urho3D.Graphics
                       Graphics.Urho3D.Graphics.Camera
                       Graphics.Urho3D.Graphics.Defs
                       Graphics.Urho3D.Graphics.Drawable
                       Graphics.Urho3D.Graphics.Graphics
                       Graphics.Urho3D.Graphics.Light
                       Graphics.Urho3D.Graphics.Material
                       Graphics.Urho3D.Graphics.Model
                       Graphics.Urho3D.Graphics.Octree
                       Graphics.Urho3D.Graphics.Renderer
                       Graphics.Urho3D.Graphics.StaticModel
                       Graphics.Urho3D.Graphics.Texture
                       Graphics.Urho3D.Graphics.Texture2D
                       Graphics.Urho3D.Graphics.Viewport
                       Graphics.Urho3D.Input
                       Graphics.Urho3D.Input.Events
                       Graphics.Urho3D.Input.Input
                       Graphics.Urho3D.IO
                       Graphics.Urho3D.IO.FileSystem
                       Graphics.Urho3D.Math
                       Graphics.Urho3D.Math.Color
                       Graphics.Urho3D.Math.Defs
                       Graphics.Urho3D.Math.Quaternion
                       Graphics.Urho3D.Math.Random
                       Graphics.Urho3D.Math.Rect
                       Graphics.Urho3D.Math.StringHash
                       Graphics.Urho3D.Math.Vector2 
                       Graphics.Urho3D.Math.Vector3
                       Graphics.Urho3D.Monad
                       Graphics.Urho3D.Network
                       Graphics.Urho3D.Network.Connection
                       Graphics.Urho3D.Resource
                       Graphics.Urho3D.Resource.Cache
                       Graphics.Urho3D.Resource.Image
                       Graphics.Urho3D.Resource.Resource
                       Graphics.Urho3D.Resource.XMLElement
                       Graphics.Urho3D.Resource.XMLFile
                       Graphics.Urho3D.Scene
                       Graphics.Urho3D.Scene.Animatable
                       Graphics.Urho3D.Scene.Component
                       Graphics.Urho3D.Scene.CustomLogicComponent
                       Graphics.Urho3D.Scene.Events
                       Graphics.Urho3D.Scene.LogicComponent
                       Graphics.Urho3D.Scene.Node
                       Graphics.Urho3D.Scene.Scene
                       Graphics.Urho3D.Scene.Serializable
                       Graphics.Urho3D.UI
                       Graphics.Urho3D.UI.BorderImage
                       Graphics.Urho3D.UI.Button
                       Graphics.Urho3D.UI.CheckBox
                       Graphics.Urho3D.UI.Cursor
                       Graphics.Urho3D.UI.Element
                       Graphics.Urho3D.UI.Events
                       Graphics.Urho3D.UI.Font
                       Graphics.Urho3D.UI.LineEdit
                       Graphics.Urho3D.UI.Sprite
                       Graphics.Urho3D.UI.Text
                       Graphics.Urho3D.UI.ToolTip
                       Graphics.Urho3D.UI.UI
                       Graphics.Urho3D.UI.Window

  other-modules:       Graphics.Urho3D.Container.Internal.Str
                       Graphics.Urho3D.Core.Internal.Context
                       Graphics.Urho3D.Core.Internal.Object
                       Graphics.Urho3D.Core.Internal.Variant
                       Graphics.Urho3D.Engine.Internal.Application
                       Graphics.Urho3D.Engine.Internal.Console
                       Graphics.Urho3D.Engine.Internal.DebugHud
                       Graphics.Urho3D.Engine.Internal.Engine
                       Graphics.Urho3D.Graphics.Internal.Camera
                       Graphics.Urho3D.Graphics.Internal.Drawable
                       Graphics.Urho3D.Graphics.Internal.Graphics
                       Graphics.Urho3D.Graphics.Internal.Light
                       Graphics.Urho3D.Graphics.Internal.Material
                       Graphics.Urho3D.Graphics.Internal.Model
                       Graphics.Urho3D.Graphics.Internal.Octree
                       Graphics.Urho3D.Graphics.Internal.Renderer
                       Graphics.Urho3D.Graphics.Internal.StaticModel
                       Graphics.Urho3D.Graphics.Internal.Texture
                       Graphics.Urho3D.Graphics.Internal.Texture2D
                       Graphics.Urho3D.Graphics.Internal.Viewport
                       Graphics.Urho3D.Input.Internal.Input
                       Graphics.Urho3D.IO.Internal.FileSystem
                       Graphics.Urho3D.Math.Internal.Color
                       Graphics.Urho3D.Math.Internal.Quaternion
                       Graphics.Urho3D.Math.Internal.Rect
                       Graphics.Urho3D.Math.Internal.StringHash
                       Graphics.Urho3D.Math.Internal.Vector2 
                       Graphics.Urho3D.Math.Internal.Vector3
                       Graphics.Urho3D.Network.Internal.Connection
                       Graphics.Urho3D.Resource.Internal.Cache
                       Graphics.Urho3D.Resource.Internal.Image
                       Graphics.Urho3D.Resource.Internal.Resource
                       Graphics.Urho3D.Resource.Internal.XMLElement
                       Graphics.Urho3D.Resource.Internal.XMLFile
                       Graphics.Urho3D.Scene.Internal.Animatable
                       Graphics.Urho3D.Scene.Internal.Component
                       Graphics.Urho3D.Scene.Internal.CustomLogicComponent
                       Graphics.Urho3D.Scene.Internal.LogicComponent
                       Graphics.Urho3D.Scene.Internal.Node
                       Graphics.Urho3D.Scene.Internal.Scene
                       Graphics.Urho3D.Scene.Internal.Serializable
                       Graphics.Urho3D.Template
                       Graphics.Urho3D.UI.Internal.BorderImage
                       Graphics.Urho3D.UI.Internal.Button
                       Graphics.Urho3D.UI.Internal.CheckBox
                       Graphics.Urho3D.UI.Internal.Cursor
                       Graphics.Urho3D.UI.Internal.Element
                       Graphics.Urho3D.UI.Internal.Font
                       Graphics.Urho3D.UI.Internal.LineEdit
                       Graphics.Urho3D.UI.Internal.Sprite
                       Graphics.Urho3D.UI.Internal.Text
                       Graphics.Urho3D.UI.Internal.ToolTip
                       Graphics.Urho3D.UI.Internal.UI
                       Graphics.Urho3D.UI.Internal.Window

  c-sources:           src/Graphics/Urho3D/Container/Str.cpp
                       src/Graphics/Urho3D/Core/Context.cpp
                       src/Graphics/Urho3D/Core/Events.cpp
                       src/Graphics/Urho3D/Core/Object.cpp
                       src/Graphics/Urho3D/Core/ProcessUtils.cpp
                       src/Graphics/Urho3D/Core/Variant.cpp
                       src/Graphics/Urho3D/Engine/Application.cpp
                       src/Graphics/Urho3D/Engine/Console.cpp
                       src/Graphics/Urho3D/Engine/DebugHud.cpp
                       src/Graphics/Urho3D/Engine/Engine.cpp
                       src/Graphics/Urho3D/Graphics/Camera.cpp
                       src/Graphics/Urho3D/Graphics/Defs.cpp
                       src/Graphics/Urho3D/Graphics/Drawable.cpp
                       src/Graphics/Urho3D/Graphics/Graphics.cpp
                       src/Graphics/Urho3D/Graphics/Light.cpp
                       src/Graphics/Urho3D/Graphics/Material.cpp
                       src/Graphics/Urho3D/Graphics/Model.cpp
                       src/Graphics/Urho3D/Graphics/Octree.cpp
                       src/Graphics/Urho3D/Graphics/Renderer.cpp
                       src/Graphics/Urho3D/Graphics/StaticModel.cpp
                       src/Graphics/Urho3D/Graphics/Texture.cpp
                       src/Graphics/Urho3D/Graphics/Texture2D.cpp
                       src/Graphics/Urho3D/Graphics/Viewport.cpp
                       src/Graphics/Urho3D/Input/Events.cpp
                       src/Graphics/Urho3D/Input/Input.cpp
                       src/Graphics/Urho3D/IO/FileSystem.cpp
                       src/Graphics/Urho3D/Math/Color.cpp
                       src/Graphics/Urho3D/Math/Defs.cpp
                       src/Graphics/Urho3D/Math/Quaternion.cpp
                       src/Graphics/Urho3D/Math/Random.cpp
                       src/Graphics/Urho3D/Math/Rect.cpp
                       src/Graphics/Urho3D/Math/StringHash.cpp
                       src/Graphics/Urho3D/Math/Vector2.cpp
                       src/Graphics/Urho3D/Math/Vector3.cpp
                       src/Graphics/Urho3D/Network/Connection.cpp
                       src/Graphics/Urho3D/Resource/Cache.cpp
                       src/Graphics/Urho3D/Resource/Image.cpp
                       src/Graphics/Urho3D/Resource/Resource.cpp
                       src/Graphics/Urho3D/Resource/XMLElement.cpp
                       src/Graphics/Urho3D/Resource/XMLFile.cpp
                       src/Graphics/Urho3D/Scene/Animatable.cpp
                       src/Graphics/Urho3D/Scene/Component.cpp
                       src/Graphics/Urho3D/Scene/CustomLogicComponent.cpp
                       src/Graphics/Urho3D/Scene/Events.cpp
                       src/Graphics/Urho3D/Scene/LogicComponent.cpp
                       src/Graphics/Urho3D/Scene/Node.cpp
                       src/Graphics/Urho3D/Scene/Scene.cpp
                       src/Graphics/Urho3D/Scene/Serializable.cpp
                       src/Graphics/Urho3D/UI/BorderImage.cpp
                       src/Graphics/Urho3D/UI/Button.cpp
                       src/Graphics/Urho3D/UI/CheckBox.cpp
                       src/Graphics/Urho3D/UI/Cursor.cpp
                       src/Graphics/Urho3D/UI/Element.cpp
                       src/Graphics/Urho3D/UI/Events.cpp
                       src/Graphics/Urho3D/UI/Font.cpp
                       src/Graphics/Urho3D/UI/LineEdit.cpp
                       src/Graphics/Urho3D/UI/Sprite.cpp
                       src/Graphics/Urho3D/UI/Text.cpp
                       src/Graphics/Urho3D/UI/ToolTip.cpp
                       src/Graphics/Urho3D/UI/UI.cpp
                       src/Graphics/Urho3D/UI/Window.cpp
                       
  build-depends:        base
                      , containers
                      , inline-c
                      , inline-c-cpp
                      , deepseq
                      , transformers
                      , mtl
                      , exceptions
                      , loch-th
                      , template-haskell
                      , StateVar
                      , raw-strings-qq
                      , lens
                      , text 
                      , bytestring
                      , stm 
                      , hashable
                      , unordered-containers

  default-extensions:
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    OverloadedStrings
    QuasiQuotes
    ScopedTypeVariables
    TemplateHaskell
    TypeFamilies
    UndecidableInstances
    RecordWildCards
    
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror 
  extra-libraries:     Urho3D, stdc++
  if flag(Urho3DOpenGL)
    cc-options: -DURHO3D_OPENGL
  else 
    if flag(Urho3DD3D11)
      cc-options: -DURHO3D_D3D11

executable urho3d-haskell-sample01
  hs-source-dirs:      app/sample01, app/common
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Sample
                       Internal.Sample
  build-depends:       base
                     , urho3d-haskell
                     , StateVar
                     , lens
                     , mtl
                     , thyme
                     , old-locale
                     , raw-strings-qq

  default-extensions:
    MultiWayIf
    OverloadedStrings
    QuasiQuotes
    RecordWildCards
    ScopedTypeVariables
    TemplateHaskell
    TypeFamilies
  default-language:    Haskell2010

executable urho3d-haskell-sample02
  hs-source-dirs:      app/sample02, app/common
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Sample
                       Internal.Sample
  build-depends:       base
                     , urho3d-haskell
                     , StateVar
                     , lens
                     , mtl
                     , thyme
                     , old-locale
                     , raw-strings-qq
                     , text

  default-extensions:
    MultiWayIf
    OverloadedStrings
    QuasiQuotes
    RecordWildCards
    ScopedTypeVariables
    TemplateHaskell
    TypeFamilies
  default-language:    Haskell2010

executable urho3d-haskell-sample03
  hs-source-dirs:      app/sample03, app/common
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Sample
                       Internal.Sample
  build-depends:       base
                     , urho3d-haskell
                     , StateVar
                     , lens
                     , mtl
                     , thyme
                     , old-locale
                     , raw-strings-qq
                     , text

  default-extensions:
    MultiWayIf
    OverloadedStrings
    QuasiQuotes
    RecordWildCards
    ScopedTypeVariables
    TemplateHaskell
    TypeFamilies
  default-language:    Haskell2010

executable urho3d-haskell-sample04
  hs-source-dirs:      app/sample04, app/common
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Sample
                       Internal.Sample
  build-depends:       base
                     , urho3d-haskell
                     , StateVar
                     , lens
                     , mtl
                     , thyme
                     , old-locale
                     , raw-strings-qq
                     , text

  default-extensions:
    MultiWayIf
    OverloadedStrings
    QuasiQuotes
    RecordWildCards
    ScopedTypeVariables
    TemplateHaskell
    TypeFamilies
  default-language:    Haskell2010

executable urho3d-haskell-sample05
  hs-source-dirs:      app/sample05, app/common
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Sample
                       Internal.Sample
  build-depends:       base
                     , urho3d-haskell
                     , StateVar
                     , lens
                     , mtl
                     , thyme
                     , old-locale
                     , raw-strings-qq
                     , text

  default-extensions:
    MultiWayIf
    OverloadedStrings
    QuasiQuotes
    RecordWildCards
    ScopedTypeVariables
    TemplateHaskell
    TypeFamilies
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git@github.com:Teaspot-Studio/Urho3D-Haskell.git
