name:                urho3d-bindgen
version:             0.1.0.0
synopsis:            Utilities to generate bindings for Urho3D
description:         Please see README.md
homepage:            https://github.com/teaspot-studio/urho3d-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              NCrashed
maintainer:          ncrashed@gmail.com
copyright:           2016 Anton Gushcha
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Graphics.Urho3D.Container.ForeignVector
    Graphics.Urho3D.Container.HashMap
    Graphics.Urho3D.Container.Ptr
    Graphics.Urho3D.Container.Vector
    Graphics.Urho3D.Creatable
    Graphics.Urho3D.Interface.AST
    Graphics.Urho3D.Interface.AST.Lexer
    Graphics.Urho3D.Interface.AST.Struct
    Graphics.Urho3D.Interface.AST.Type
    Graphics.Urho3D.Monad
    Graphics.Urho3D.Multithread
    Graphics.Urho3D.Parent
    Graphics.Urho3D.Template
  build-depends:
      base >= 4.7 && < 5
    , bytestring >= 0.10
    , containers >= 0.5
    , deepseq >= 1.4
    , exceptions >= 0.8
    , hashable >= 1.2
    , inline-c >= 0.5
    , megaparsec >= 4.4
    , mtl >= 2.2
    , stm >= 2.4
    , template-haskell >= 2.10
    , text >= 1.2
    , transformers >= 0.4
    , unordered-containers >= 0.2
    , vector >= 0.11

  default-language:    Haskell2010
  default-extensions:
    ConstraintKinds
    CPP
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    OverloadedStrings
    QuasiQuotes
    RecordWildCards
    ScopedTypeVariables
    TemplateHaskell
    TypeFamilies
    UndecidableInstances

test-suite urho3d-bindgen-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:
      base
    , urho3d-bindgen
    , tasty >= 0.11
    , tasty-hunit >= 0.9

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/teaspot-studio/urho3d-haskell
